[package]
name = "metrum"
description = "Easily work with and compare temeratures in different units"
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/deebloo/metrum"
documentation = "https://docs.rs/metrum/0.5.0"

[dependencies]
serde = { version = "1.0.197", optional = true, features = ["derive"] }
wasm-bindgen = { version = "0.2.100", optional = true }

[features]
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
metrum = { path = ".", features = ["serde", "wasm"] }
